--- a/source/components/Post/styles.m.css
+++ b/source/components/Post/styles.m.css
@@ -3,7 +3,6 @@
     width: 500px;
     margin-top: 10px;
     padding: 12px;
-    border: 1px solid var(--paletteColor3);
     border-radius: 3px;
     background-color: var(--paletteColor2);
     word-wrap: break-word;
@@ -46,14 +45,14 @@
         font-size: 14px;
     }
 
-    .cross {
+    & .cross {
         content: '';
         position: absolute;
         top: 12px;
         right: 12px;
         width: 10px;
         height: 10px;
-        background-image: url(../../theme/assets/cross.png);
+        background-image: url('../../theme/assets/cross.png');
         background-repeat: no-repeat;
         cursor: pointer;
 
