--- a/source/components/Login/styles.m.css
+++ b/source/components/Login/styles.m.css
@@ -25,7 +25,7 @@
             outline: none;
         }
 
-        & button {
+        & input[type='submit'] {
             display: flex;
             align-items: center;
             justify-content: center;
